feat(structural): 完善屋顶连接点生成和类型映射功能
- 使用 getFirst() 方法替代索引访问获取主楼层板
- 移除 roofPlate 参数传递，统一传入 null 值
- 添加 RoofArchetype 导入并移除冗余注释代码
- 实现完整的 Socket 对象创建，包括切线方向计算
- 添加 RoofArchetypeMapper 工具类进行类型映射
- 实现语义标签创建和解析功能
- 添加切线方向计算方法，支持卡迪尔坐标系转换